blueox (0.11.6.3)
  * Fix handling of unicode strings

blueox (0.11.6.2)
  * Fix DeprecationWarning: integer argument expected

blueox (0.11.6.1)
  * make msgunpack utf8-friendly and oxstash more resilient with ES bulk indexing failures

blueox (0.11.5)
  * update oxstash with more recent return status from Elasticsearch

blueox (0.11.4)

  * add command line option to set range for streaming ports (bks7)

-- Konstantin Belyaev <konstantin.belyaev@postmates.com> Fri Nov 17 19:03:51 2017 +0400

blueox (0.11.3)

  * Fix for race condition in global contexts (rhettg)

-- Rhett Garber <rhettg@gmail.com>  Mon, 16 Nov 2015 14:27:00 -0700

blueox (0.11.2)

  * Fix file locking in oxstore for non-BSD based systems (rhettg)
  * pyflake and cleanup (rhettg)

-- Rhett Garber <rhettg@gmail.com>  Wed, 3 June 2015 10:28:00 -0700

blueox (0.11.1)

  * Support for creating a lock file in oxstore (rhettg)

-- Rhett Garber <rhettg@gmail.com>  Tue, 2 June 2015 13:22:00 -0700

blueox (0.11.0)

  * New log management command `oxstore` (rhettg)
  * Configurable hourly log rotation scheme for oxd (rhettg)
  * Code-styles by YAPF (rhettg)

-- Rhett Garber <rhettg@gmail.com>  Mon, 1 June 2015 12:32:00 -0700

blueox (0.10.1)

  * Fixes for Flask middleware (bordicon)

-- Rhett Garber <rhettg@gmail.com>  Mon, 11 May 2015 18:42:00 -0700

blueox (0.10.0)

  * Add a timeout value for oxingest (hemant)
  * Middleware for Flask (bordicon)
  * JSON output by default for command line tools (rather than python repr
    format. This removes the --json option for oxview) (rhettg)
  * Better defaults for host and port for command-line tools, client library
    and configuration. (rhettg)
  * Fix for a race condition with initializing networking. (rhettg)

-- Rhett Garber <rhettg@gmail.com>  Tue, 4 Apr 2015 16:08:00 -0700

blueox (0.9.2)

  * Fix a bug where context name that had a parent with a similiar, but not
    exact prefix, might end up jumbled.
