@@ -1,3 +1,6 @@
+blueox (0.11.6.4)
+  * Fix encoding of unknown types
+
 blueox (0.11.6.3)
   * Fix handling of unicode strings
 
